{{$NEXT}}

2.103641  2010-12-30 19:57:38 Europe/London

  * Add ExtremeXOS phrases courtesy those nice PacketFence people.

2.103640  2010-12-30 19:47:36 Europe/London

  * Port to Dist::Zilla

libnet-appliance-phrasebook-perl (1.8) UNRELEASED; urgency=low

  * Various JUNOS fixes (submitted via forum by quandarypeak)
  * Added PIXOS7 device which has a different pager command (RT#40784)

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Tue, 30 Dec 2008 22:38:44 +0000

libnet-appliance-phrasebook-perl (1.7) UNRELEASED; urgency=low

  * Move to Module::Install
  * Update license to be same terms as Perl

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sat,  8 Nov 2008 16:42:09 +0000

libnet-appliance-phrasebook-perl (1.6) UNRELEASED; urgency=low

  * Fix for probably bug in matching configure/privilege mode 

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sun, 19 Oct 2008 01:29:58 +0100

libnet-appliance-phrasebook-perl (1.5) UNRELEASED; urgency=low

  * Character class error for HP and Nortel, spotted by Marc Remijn 
  * Add beginnings of a JUNOS phrasebook, courtesy Eddie Parra

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sun, 19 Oct 2008 00:28:12 +0100

libnet-appliance-phrasebook-perl (1.4) unstable; urgency=low

  * Switch to external YAML phrasebook file instead of a File::Temp and <DATA>

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sat, 23 Aug 2008 12:05:37 +0100

libnet-appliance-phrasebook-perl (1.3) unstable; urgency=low

  * Switch to a File::Temp instead of re-reading <DATA> 

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sun, 17 Aug 2008 18:08:36 +0100

libnet-appliance-phrasebook-perl (1.2) unstable; urgency=low

  * Added phrase for command line completion
  * Bumped version into the real world.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Tue, 03 Jun 2008 17:54:43 +0100

libnet-appliance-phrasebook-perl (0.1) unstable; urgency=low

  * Added 'disconnect' phrase for RT.cpan#35937
